docs/spec/grammar/conformance/reject/19-grow-reserved-not-active.myc
// rejected: 'grow' is superseded by 'derive' (DN-38 §8.1 / M-812 — the grow→derive
// reconciliation). The keyword still lexes (reserved, never a silent identifier, G2) but
// produces a teaching diagnostic pointing at `derive Name for T` (the active form) or
// `lower Name[params] = <rhs>` (to define a rule), distinct from the plain DN-03 §1
// "not yet active" message for `consume`. Its diagnostic names DN-38 (not DN-03 §1).
nodule demo;
grow worker
